manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cicdwithkubernetes
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cicdwithkubernetes
  template:
    metadata:
      labels:
        app: cicdwithkubernetes
    spec:
      containers:
        - name: cicdwithkubernetes 
          image: aksacr5.azurecr.io/cicdwithkubernetes
