manifests/ingress-prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 annotations:
    kubernetes.io/ingress.class: "nginx"
    app.kubernetes.io/name: "nginx-ingress-controller"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cicdwithkubernetes
            port:
              number: 8080
